--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/fonts/fontawesome-free-5.15.4-web/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css/family=Roboto:300,400,500,700&display=swap&subset=vietnamese">
     <link rel="stylesheet" href="./assets/css/base.css">
     <link rel="stylesheet" href="./assets/css/header.css">
     <link rel="stylesheet" href="./assets/css/form.css">
-    <link rel="stylesheet" href="./assets/fonts/fontawesome-free-5.15.4-web/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css/family=Roboto:300,400,500,700&display=swap&subset=vietnamese">
 </head>
 <body>
     <div id="app" class="app">
@@ -131,12 +131,12 @@
         <div class="modal">
             <div class="modal__overlay"></div>
             <div class="modal__body">
-                <!-- Form Login/register -->
-                <div class="auth-form">
+                <!-- Form Register -->
+                <!-- <div class="auth-form">
                     <div class="auth-form__container">
                         <div class="auth-form__header">
-                            <h3 class="auth-form__heading">Đăng kí</h3>
-                            <span class="auth-form__switch-btn">Đăng Nhập</span>
+                            <h3 class="auth-form__heading">Đăng ký</h3>
+                            <span class="auth-form__switch-btn">Đăng nhập</span>
                         </div>
                         <div class="auth-form__form">
                             <div class="auth-form__group">
@@ -160,18 +160,58 @@
                             </p>
                         </div>
                         <div class="auth-form__constrols">
-                            <button class="btn auth-form__constrols-back">TRỞ LẠI</button>
+                            <button class="btn auth-form__constrols-back btn--normal">TRỞ LẠI</button>
                             <button class="btn btn--primary">ĐĂNG KÍ</button>
                         </div>
                     </div>
                     <div class="auth-form__socials">
-                        <a href="" class="btn btn--with-icon">
-                            <i class="fab fa-facebook"></i>
-                            Kết nối với Facebook
+                        <a href="" class="btn btn--size-s btn--with-icon auth-form__socials--facebook">
+                            <i class="fab fa-facebook auth-form__socials-icon"></i>
+                            <span class="auth-form__socials-title">Kết nối với Facebook</span>
                         </a>
-                        <a href="" class="btn btn--with-icon">
-                            <i class="fab fa-google"></i>
-                            Kết nối với Google
+                        <a href="" class="btn btn--size-s btn--with-icon auth-form__socials--google">
+                            <i class="fab fa-google auth-form__socials-icon"></i>
+                            <span class="auth-form__socials-title">Kết nối với Google</span>
+                        </a>
+                    </div>
+                </div> -->
+                <!-- Form Login -->
+                <div class="auth-form">
+                    <div class="auth-form__container">
+                        <div class="auth-form__header">
+                            <h3 class="auth-form__heading">Đăng nhập</h3>
+                            <span class="auth-form__switch-btn">Đăng ký</span>
+                        </div>
+                        <div class="auth-form__form">
+                            <div class="auth-form__group">
+                                <input type="text" class="auth-form__input" placeholder="Email của bạn">
+                            </div>
+                        </div>
+                        <div class="auth-form__form">
+                            <div class="auth-form__group">
+                                <input type="password" class="auth-form__input" placeholder="Mật khẩu của bạn">
+                            </div>
+                        </div>
+                        <div class="auth-form__aside">
+                            <div class="auth-form__help">
+                                <a href="" class="auth-form__help-link auth-form__help-forgot">Quên mật khẩu</a>
+                                <span class="auth-form__help--separate"></span>
+                                <a href="" class="auth-form__help-link">Cần trợ giúp?</a>
+                            </div>
+                        </div>
+                        <div class="auth-form__constrols">
+                            <button class="btn auth-form__constrols-back btn--normal">TRỞ LẠI</button>
+                            <button class="btn btn--primary">ĐĂNG NHẬP</button>
+                        </div>
+                    </div>
+                    <div class="auth-form__socials">
+                        <a href="" class="btn btn--size-s btn--with-icon auth-form__socials--facebook">
+                            <i class="fab fa-facebook auth-form__socials-icon"></i>
+                            <span class="auth-form__socials-title">Kết nối Facebook</span>
+                        </a>
+                        <a href="" class="btn btn--size-s btn--with-icon auth-form__socials--google">
+                            <i class="fab fa-google auth-form__socials-icon"></i>
+                            <span class="auth-form__socials-title">Kết nối Google</span>
                         </a>
                     </div>
                 </div>
