add history search

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <nav class="header__navbar">
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item header__navbar-item--separate header__navbar-item--has-qr">
-                            Vào cửa hàng trên ứng dụng F8-Shop
+                            Vào cửa hàng trên ứng dụng Shoppe
                             <div class="header__qr">
                                 <img class="header__qr-img" src="./assets/img/QRCode.png" alt="QR code">
                                 <div class="header__qr-apps">
@@ -119,6 +119,49 @@
                         </li>
                     </ul>
                 </nav>
+                <!-- Header with search -->
+                <div class="header-with-search">
+                    <div class="header__logo">
+                        <img class="header__logo-img" src="https://cf.shopee.vn/file/d734f6291f072bb855371432da462d65" alt="">
+                    </div>
+                    <div class="header__search">
+                        <div class="header__search-input-wrap">
+                            <input type="text" class="header__search-input" placeholder="Nhập để tìm kiếm sản phẩm">
+                            <!-- Search history -->
+                            <div class="header__search-history">
+                                <h3 class="header__search-history-heading">Lịch sử tìm kiếm</h3>
+                                <ul class="header__search-history-list">
+                                    <li class="header__search-history-item">
+                                        <a href="" class="header__search-history-item--link">Khách hàng</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="header__search-select">
+                            <span class="header__search-select-label">
+                                Trong Shop
+                            </span>
+                            <i class="header__search-select-icon fas fa-angle-down"></i>
+                            <ul class="header__search-options">
+                                <li class="header__search-options-items">
+                                    <span>Trong Shop</span>
+                                    <i class="fas fa-check"></i>
+                                </li>
+                                <li class="header__search-options-items">
+                                    <span>Ngoài Shop</span>
+                                    <i class="fas fa-check"></i>
+                                </li>
+                            </ul>
+                        </div>
+                        <button class="header_search-btn">
+                            <!-- Search -->
+                            <i class="header__search-btn-icon fas fa-search"></i>
+                        </button>
+                    </div>
+                    <div class="header__cart">
+                        <i class="header__cart-icon fas fa-shopping-cart"></i>
+                    </div>
+                </div>
             </div>
         </header>
         <div class="container">
@@ -128,9 +171,9 @@
 
         </footer>
         <!-- Modal layout -->
-        <div class="modal">
+        <!-- <div class="modal">
             <div class="modal__overlay"></div>
-            <div class="modal__body">
+            <div class="modal__body"> -->
                 <!-- Form Register -->
                 <!-- <div class="auth-form">
                     <div class="auth-form__container">
@@ -176,7 +219,7 @@
                     </div>
                 </div> -->
                 <!-- Form Login -->
-                <div class="auth-form">
+                <!-- <div class="auth-form">
                     <div class="auth-form__container">
                         <div class="auth-form__header">
                             <h3 class="auth-form__heading">Đăng nhập</h3>
@@ -216,7 +259,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
