--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <ul class="header__navbar-list">
                         <li class="header__navbar-item header__navbar-item--has-notify">
                             <a href="" class="header__navbar-item-link">
-                                <i class="fas fa-bell header__navbar-icon"></i>
+                                <i class="far fa-bell header__navbar-icon"></i>
                                 Thông báo
                             </a>
                             <div class="header__notify">
@@ -111,18 +111,39 @@
                                 Trợ giúp
                             </a>
                         </li>
-                        <li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">
+                        <!-- <li class="header__navbar-item header__navbar-item--strong header__navbar-item--separate">
                             Đăng ký
                         </li>
                         <li class="header__navbar-item header__navbar-item--strong">
                             Đăng nhập
-                        </li>
+                        </li> -->
+                            <li class="header__navbar-item header__navbar-user">
+                                <img src="https://cf.shopee.vn/file/4138fc6a51b04ed2c341ed7c5bb54335_tn" alt="" class="header__navbar-user-img">
+                                <span class="header__navbar-user-name">Đoàn Minh Đức</span>
+
+                                <ul class="header__navbar-user-menu">
+                                    <li class="header__navbar-user-item">
+                                        <a href="#">Tài khoản của tôi</a>
+                                    </li>
+                                    <li class="header__navbar-user-item">
+                                        <a href="#">Địa chỉ của tôi</a>
+                                    </li>
+                                    <li class="header__navbar-user-item">
+                                        <a href="#">Đơn mua của tôi</a>
+                                    </li>
+                                    <li class="header__navbar-user-item header__navbar-user-item--separate">
+                                        <a href="#">Đăng xuất</a>
+                                    </li>
+                                </ul>
+                            </li>
                     </ul>
                 </nav>
                 <!-- Header with search -->
                 <div class="header-with-search">
                     <div class="header__logo">
-                        <img class="header__logo-img" src="https://cf.shopee.vn/file/d734f6291f072bb855371432da462d65" alt="">
+                        <a href="#" class="header__logo-link">
+                            <img class="header__logo-img" src="https://cf.shopee.vn/file/d734f6291f072bb855371432da462d65" alt="">
+                        </a>
                     </div>
                     <div class="header__search">
                         <div class="header__search-input-wrap">
